--- a/Proyecto 2/CPU/Processor.qsf
+++ b/Proyecto 2/CPU/Processor.qsf
@@ -42,7 +42,7 @@ set_global_assignment -name DEVICE 10M08DAF484C8G
 set_global_assignment -name TOP_LEVEL_ENTITY Processor
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 23.1STD.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "11:43:22  ABRIL 14, 2024"
-set_global_assignment -name LAST_QUARTUS_VERSION "23.1std.0 Lite Edition"
+set_global_assignment -name LAST_QUARTUS_VERSION "20.1.1 Lite Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
@@ -80,3 +80,8 @@ set_global_assignment -name SYSTEMVERILOG_FILE flopr.sv
 set_global_assignment -name SYSTEMVERILOG_FILE mux2.sv
 set_global_assignment -name SYSTEMVERILOG_FILE regfile.sv
 set_global_assignment -name SYSTEMVERILOG_FILE alu.sv
+set_global_assignment -name SYSTEMVERILOG_FILE VGA/generate_graphic.sv
+set_global_assignment -name SYSTEMVERILOG_FILE VGA/generate_rectangle.sv
+set_global_assignment -name SYSTEMVERILOG_FILE VGA/pll.sv
+set_global_assignment -name SYSTEMVERILOG_FILE VGA/vga_controller.sv
+set_global_assignment -name SYSTEMVERILOG_FILE VGA/vga_module.sv
