--- a/Proyecto 2/CPU/Processor.qsf
+++ b/Proyecto 2/CPU/Processor.qsf
@@ -59,7 +59,7 @@ set_global_assignment -name SYSTEMVERILOG_FILE Testbenches/regfile_tb.sv
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH zeroExtend_tb -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH mux_4_tb -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_NAME regfile_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id regfile_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME regfile_tb -section_id regfile_tb
@@ -89,13 +89,25 @@ set_global_assignment -name SYSTEMVERILOG_FILE Testbenches/zeroExtend_tb.sv
 set_global_assignment -name EDA_TEST_BENCH_NAME signExtend_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id signExtend_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME signExtend_tb -section_id signExtend_tb
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name EDA_TEST_BENCH_NAME zeroExtend_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id zeroExtend_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME zeroExtend_tb -section_id zeroExtend_tb
+set_global_assignment -name SYSTEMVERILOG_FILE mux_2.sv
+set_global_assignment -name SYSTEMVERILOG_FILE Testbenches/mux_2_tb.sv
+set_global_assignment -name EDA_TEST_BENCH_NAME mux_2_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id mux_2_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME mux_2_tb -section_id mux_2_tb
+set_global_assignment -name SYSTEMVERILOG_FILE mux_4.sv
+set_global_assignment -name SYSTEMVERILOG_FILE Testbenches/mux_4_tb.sv
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/regfile_tb.sv -section_id regfile_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/adder_tb.sv -section_id adder_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/subtractor_tb.sv -section_id subtractor_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/ALU_tb.sv -section_id ALU_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/signExtend_tb.sv -section_id signExtend_tb
-set_global_assignment -name EDA_TEST_BENCH_NAME zeroExtend_tb -section_id eda_simulation
-set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id zeroExtend_tb
-set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME zeroExtend_tb -section_id zeroExtend_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/zeroExtend_tb.sv -section_id zeroExtend_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/mux_2_tb.sv -section_id mux_2_tb
+set_global_assignment -name EDA_TEST_BENCH_NAME mux_4_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id mux_4_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME mux_4_tb -section_id mux_4_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/mux_4_tb.sv -section_id mux_4_tb
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
