--- a/Proyecto 2/CPU/Processor.qsf
+++ b/Proyecto 2/CPU/Processor.qsf
@@ -59,7 +59,7 @@ set_global_assignment -name SYSTEMVERILOG_FILE Testbenches/regfile_tb.sv
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH PCregister_tb -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH decoderMemory_tb -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_NAME regfile_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id regfile_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME regfile_tb -section_id regfile_tb
@@ -109,6 +109,11 @@ set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id PCadder_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME PCadder_tb -section_id PCadder_tb
 set_global_assignment -name SYSTEMVERILOG_FILE PCregister.sv
 set_global_assignment -name SYSTEMVERILOG_FILE Testbenches/PCregister_tb.sv
+set_global_assignment -name EDA_TEST_BENCH_NAME PCregister_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id PCregister_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME PCregister_tb -section_id PCregister_tb
+set_global_assignment -name SYSTEMVERILOG_FILE decoderMemory.sv
+set_global_assignment -name SYSTEMVERILOG_FILE Testbenches/decoderMemory_tb.sv
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/regfile_tb.sv -section_id regfile_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/adder_tb.sv -section_id adder_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/subtractor_tb.sv -section_id subtractor_tb
@@ -118,8 +123,9 @@ set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/zeroExtend_tb.sv -se
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/mux_2_tb.sv -section_id mux_2_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/mux_4_tb.sv -section_id mux_4_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/PCadder_tb.sv -section_id PCadder_tb
-set_global_assignment -name EDA_TEST_BENCH_NAME PCregister_tb -section_id eda_simulation
-set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id PCregister_tb
-set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME PCregister_tb -section_id PCregister_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/PCregister_tb.sv -section_id PCregister_tb
+set_global_assignment -name EDA_TEST_BENCH_NAME decoderMemory_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id decoderMemory_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME decoderMemory_tb -section_id decoderMemory_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/decoderMemory_tb.sv -section_id decoderMemory_tb
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
