--- a/Proyecto 2/CPU/Processor.qsf
+++ b/Proyecto 2/CPU/Processor.qsf
@@ -137,7 +137,6 @@ set_global_assignment -name SYSTEMVERILOG_FILE Testbenches/MemoryWriteback_regis
 set_global_assignment -name EDA_TEST_BENCH_NAME MemoryWriteback_register_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id MemoryWriteback_register_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME MemoryWriteback_register_tb -section_id MemoryWriteback_register_tb
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/regfile_tb.sv -section_id regfile_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/adder_tb.sv -section_id adder_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/subtractor_tb.sv -section_id subtractor_tb
@@ -156,3 +155,5 @@ set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/MemoryWriteback_regi
 set_global_assignment -name SYSTEMVERILOG_FILE controlUnit.sv
 set_global_assignment -name SYSTEMVERILOG_FILE LogicalShiftLeft.sv
 set_global_assignment -name SYSTEMVERILOG_FILE negation.sv
+set_global_assignment -name SYSTEMVERILOG_FILE comparator.sv
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
