--- a/Proyecto 2/CPU/Processor.qsf
+++ b/Proyecto 2/CPU/Processor.qsf
@@ -181,4 +181,8 @@ set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/negation_tb.sv -sect
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/comparator_tb.sv -section_id comparator_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/controlUnit_tb.sv -section_id controlUnit_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/Fetch_Stage_tb.sv -section_id Fetch_Stage_tb
+set_global_assignment -name MIF_FILE Memory/ROM/ROM.mif
+set_global_assignment -name QIP_FILE Memory/ROM/ROM.qip
+set_global_assignment -name MIF_FILE Memory/RAM/RAM.mif
+set_global_assignment -name QIP_FILE Memory/RAM/RAM.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
