--- a/Proyecto 2/CPU/Processor.qsf
+++ b/Proyecto 2/CPU/Processor.qsf
@@ -38,7 +38,7 @@
 
 
 set_global_assignment -name FAMILY "Cyclone V"
-set_global_assignment -name DEVICE 5CGXFC7C7F23C8
+set_global_assignment -name DEVICE 5CSEMA5F31C6
 set_global_assignment -name TOP_LEVEL_ENTITY TopModule
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 20.1.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "17:42:21  APRIL 26, 2024"
@@ -185,4 +185,11 @@ set_global_assignment -name MIF_FILE Memory/ROM/ROM.mif
 set_global_assignment -name QIP_FILE Memory/ROM/ROM.qip
 set_global_assignment -name MIF_FILE Memory/RAM/RAM.mif
 set_global_assignment -name QIP_FILE Memory/RAM/RAM.qip
+set_global_assignment -name ENABLE_BOOT_SEL_PIN ON
+set_global_assignment -name ENABLE_CONFIGURATION_PINS ON
+set_global_assignment -name SYSTEMVERILOG_FILE VGA/generate_graphic.sv
+set_global_assignment -name SYSTEMVERILOG_FILE VGA/generate_rectangle.sv
+set_global_assignment -name SYSTEMVERILOG_FILE VGA/pll.sv
+set_global_assignment -name SYSTEMVERILOG_FILE VGA/vga_controller.sv
+set_global_assignment -name SYSTEMVERILOG_FILE VGA/vga_module.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
