--- a/Proyecto 2/CPU/Processor.qsf
+++ b/Proyecto 2/CPU/Processor.qsf
@@ -57,7 +57,7 @@ set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH Memory_Stage_tb -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH HazardDetectionUnit_tb -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_NAME regfile_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id regfile_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME regfile_tb -section_id regfile_tb
@@ -190,6 +190,13 @@ set_global_assignment -name SYSTEMVERILOG_FILE VGA/vga_controller.sv
 set_global_assignment -name SYSTEMVERILOG_FILE VGA/vga_module.sv
 set_global_assignment -name SYSTEMVERILOG_FILE datapath.sv
 set_global_assignment -name SYSTEMVERILOG_FILE alu.sv
+set_global_assignment -name SYSTEMVERILOG_FILE CPU.sv
+set_global_assignment -name SYSTEMVERILOG_FILE HazardDetectionUnit.sv
+set_global_assignment -name SYSTEMVERILOG_FILE Testbenches/CPU_tb.sv
+set_global_assignment -name EDA_TEST_BENCH_NAME CPU_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id CPU_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME CPU_tb -section_id CPU_tb
+set_global_assignment -name SYSTEMVERILOG_FILE Testbenches/HazardDetectionUnit_tb.sv
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/regfile_tb.sv -section_id regfile_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/adder_tb.sv -section_id adder_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/subtractor_tb.sv -section_id subtractor_tb
@@ -214,5 +221,9 @@ set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/Decode_Stage_tb.sv -
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/Execute_Stage_tb.sv -section_id Execute_Stage_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/Memory_Stage_tb.sv -section_id Memory_Stage_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/Writeback_Stage_tb.sv -section_id Writeback_Stage_tb
-set_global_assignment -name SYSTEMVERILOG_FILE CPU.sv
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/CPU_tb.sv -section_id CPU_tb
+set_global_assignment -name EDA_TEST_BENCH_NAME HazardDetectionUnit_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id HazardDetectionUnit_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME HazardDetectionUnit_tb -section_id HazardDetectionUnit_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/HazardDetectionUnit_tb.sv -section_id HazardDetectionUnit_tb
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
