--- a/Proyecto 2/CPU/Processor.qsf
+++ b/Proyecto 2/CPU/Processor.qsf
@@ -57,7 +57,7 @@ set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH Execute_Stage_tb -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH regfile_tb -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_NAME regfile_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id regfile_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME regfile_tb -section_id regfile_tb
@@ -194,6 +194,10 @@ set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id ROM_testbenc
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME ROM_testbench -section_id ROM_testbench
 set_global_assignment -name MIF_FILE Memory/ROM/ROM.mif
 set_global_assignment -name QIP_FILE Memory/ROM/ROM.qip
+set_global_assignment -name SYSTEMVERILOG_FILE decoderMemory_3outs.sv
+set_global_assignment -name MIF_FILE Memory/RAM_coordenadas/RAM_coordenadas.mif
+set_global_assignment -name QIP_FILE Memory/RAM/RAM.qip
+set_global_assignment -name QIP_FILE Memory/RAM_coordenadas/RAM_coordenadas.qip
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/regfile_tb.sv -section_id regfile_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/adder_tb.sv -section_id adder_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/subtractor_tb.sv -section_id subtractor_tb
@@ -219,8 +223,4 @@ set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/Execute_Stage_tb.sv 
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/Memory_Stage_tb.sv -section_id Memory_Stage_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/Writeback_Stage_tb.sv -section_id Writeback_Stage_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/ROM_testbench.sv -section_id ROM_testbench
-set_global_assignment -name SYSTEMVERILOG_FILE decoderMemory_3outs.sv
-set_global_assignment -name MIF_FILE Memory/RAM_coordenadas/RAM_coordenadas.mif
-set_global_assignment -name QIP_FILE Memory/RAM/RAM.qip
-set_global_assignment -name QIP_FILE Memory/RAM_coordenadas/RAM_coordenadas.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
