--- a/Proyecto 2/CPU/Processor.qsf
+++ b/Proyecto 2/CPU/Processor.qsf
@@ -223,4 +223,36 @@ set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/Execute_Stage_tb.sv 
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/Memory_Stage_tb.sv -section_id Memory_Stage_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/Writeback_Stage_tb.sv -section_id Writeback_Stage_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/ROM_testbench.sv -section_id ROM_testbench
+set_location_assignment PIN_AB12 -to rst
+set_location_assignment PIN_AC12 -to VGA_enable
+set_location_assignment PIN_F10 -to blank_b
+set_location_assignment PIN_J14 -to blue[7]
+set_location_assignment PIN_G15 -to blue[6]
+set_location_assignment PIN_F15 -to blue[5]
+set_location_assignment PIN_H14 -to blue[4]
+set_location_assignment PIN_F14 -to blue[3]
+set_location_assignment PIN_H13 -to blue[2]
+set_location_assignment PIN_G13 -to blue[1]
+set_location_assignment PIN_B13 -to blue[0]
+set_location_assignment PIN_AF14 -to clk
+set_location_assignment PIN_E11 -to green[7]
+set_location_assignment PIN_F11 -to green[6]
+set_location_assignment PIN_G12 -to green[5]
+set_location_assignment PIN_G11 -to green[4]
+set_location_assignment PIN_G10 -to green[3]
+set_location_assignment PIN_H12 -to green[2]
+set_location_assignment PIN_J10 -to green[1]
+set_location_assignment PIN_J9 -to green[0]
+set_location_assignment PIN_B11 -to h_sync
+set_location_assignment PIN_F13 -to red[7]
+set_location_assignment PIN_E12 -to red[6]
+set_location_assignment PIN_D12 -to red[5]
+set_location_assignment PIN_C12 -to red[4]
+set_location_assignment PIN_B12 -to red[3]
+set_location_assignment PIN_E13 -to red[2]
+set_location_assignment PIN_C13 -to red[1]
+set_location_assignment PIN_A13 -to red[0]
+set_location_assignment PIN_C10 -to sync_b
+set_location_assignment PIN_D11 -to v_sync
+set_location_assignment PIN_A11 -to vga_clk
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
