--- a/Proyecto 2/CPU/Processor.qsf
+++ b/Proyecto 2/CPU/Processor.qsf
@@ -57,7 +57,7 @@ set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH regfile_tb -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH CPU_tb -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_NAME regfile_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id regfile_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME regfile_tb -section_id regfile_tb
@@ -195,31 +195,6 @@ set_global_assignment -name SYSTEMVERILOG_FILE decoderMemory_3outs.sv
 set_global_assignment -name MIF_FILE Memory/RAM_coordenadas/RAM_coordenadas.mif
 set_global_assignment -name QIP_FILE Memory/RAM/RAM.qip
 set_global_assignment -name QIP_FILE Memory/RAM_coordenadas/RAM_coordenadas.qip
-set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/regfile_tb.sv -section_id regfile_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/adder_tb.sv -section_id adder_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/subtractor_tb.sv -section_id subtractor_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/ALU_tb.sv -section_id ALU_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/signExtend_tb.sv -section_id signExtend_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/zeroExtend_tb.sv -section_id zeroExtend_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/mux_2_tb.sv -section_id mux_2_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/mux_4_tb.sv -section_id mux_4_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/PCadder_tb.sv -section_id PCadder_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/PCregister_tb.sv -section_id PCregister_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/decoderMemory_tb.sv -section_id decoderMemory_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/FetchDecode_register_tb.sv -section_id FetchDecode_register_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/DecodeExecute_register_tb.sv -section_id DecodeExecute_register_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/ExecuteMemory_register_tb.sv -section_id ExecuteMemory_register_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/MemoryWriteback_register_tb.sv -section_id MemoryWriteback_register_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/LogicalShiftLeft_tb.sv -section_id LogicalShiftLeft_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/negation_tb.sv -section_id negation_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/comparator_tb.sv -section_id comparator_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/controlUnit_tb.sv -section_id controlUnit_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/Fetch_Stage_tb.sv -section_id Fetch_Stage_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/Decode_Stage_tb.sv -section_id Decode_Stage_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/Execute_Stage_tb.sv -section_id Execute_Stage_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/Memory_Stage_tb.sv -section_id Memory_Stage_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/Writeback_Stage_tb.sv -section_id Writeback_Stage_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/ROM_testbench.sv -section_id ROM_testbench
 set_location_assignment PIN_AB12 -to rst
 set_location_assignment PIN_AC12 -to VGA_enable
 set_location_assignment PIN_F10 -to blank_b
@@ -256,4 +231,34 @@ set_global_assignment -name SYSTEMVERILOG_FILE mux_2_regfile.sv
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name SYSTEMVERILOG_FILE Testbenches/CPU_tb.sv
+set_global_assignment -name EDA_TEST_BENCH_NAME CPU_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id CPU_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME CPU_tb -section_id CPU_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/CPU_tb.sv -section_id CPU_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/regfile_tb.sv -section_id regfile_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/adder_tb.sv -section_id adder_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/subtractor_tb.sv -section_id subtractor_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/ALU_tb.sv -section_id ALU_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/signExtend_tb.sv -section_id signExtend_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/zeroExtend_tb.sv -section_id zeroExtend_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/mux_2_tb.sv -section_id mux_2_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/mux_4_tb.sv -section_id mux_4_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/PCadder_tb.sv -section_id PCadder_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/PCregister_tb.sv -section_id PCregister_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/decoderMemory_tb.sv -section_id decoderMemory_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/FetchDecode_register_tb.sv -section_id FetchDecode_register_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/DecodeExecute_register_tb.sv -section_id DecodeExecute_register_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/ExecuteMemory_register_tb.sv -section_id ExecuteMemory_register_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/MemoryWriteback_register_tb.sv -section_id MemoryWriteback_register_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/LogicalShiftLeft_tb.sv -section_id LogicalShiftLeft_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/negation_tb.sv -section_id negation_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/comparator_tb.sv -section_id comparator_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/controlUnit_tb.sv -section_id controlUnit_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/Fetch_Stage_tb.sv -section_id Fetch_Stage_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/Decode_Stage_tb.sv -section_id Decode_Stage_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/Execute_Stage_tb.sv -section_id Execute_Stage_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/Memory_Stage_tb.sv -section_id Memory_Stage_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/Writeback_Stage_tb.sv -section_id Writeback_Stage_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbenches/ROM_testbench.sv -section_id ROM_testbench
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
