--- a/Proyecto 3/ARM/stats_LFURP/config.ini
+++ b/Proyecto 3/ARM/stats_LFURP/config.ini
@@ -50,7 +50,7 @@ voltage_domain=system.voltage_domain
 
 [system.cpu]
 type=BaseTimingSimpleCPU
-children=dcache decoder dtb_walker_cache icache interrupts isa itb_walker_cache mmu power_state tracer workload
+children=dcache decoder icache interrupts isa mmu power_state tracer workload
 branchPred=Null
 checker=Null
 clk_domain=system.cpu_clk_domain
@@ -168,94 +168,10 @@ leaders=
 possible_states=
 
 [system.cpu.decoder]
-type=RiscvDecoder
+type=ArmDecoder
+dvm_enabled=false
 eventq_index=0
 isa=system.cpu.isa
-
-[system.cpu.dtb_walker_cache]
-type=Cache
-children=power_state replacement_policy tags
-addr_ranges=0:18446744073709551615
-assoc=2
-clk_domain=system.cpu_clk_domain
-clusivity=mostly_incl
-compressor=Null
-data_latency=2
-demand_mshr_reserve=1
-eventq_index=0
-is_read_only=false
-max_miss_count=0
-move_contractions=true
-mshrs=10
-power_model=
-power_state=system.cpu.dtb_walker_cache.power_state
-prefetch_on_access=false
-prefetch_on_pf_hit=false
-prefetcher=Null
-replace_expansions=true
-replacement_policy=system.cpu.dtb_walker_cache.replacement_policy
-response_latency=2
-sequential_access=false
-size=1024
-system=system
-tag_latency=2
-tags=system.cpu.dtb_walker_cache.tags
-tgts_per_mshr=12
-warmup_percentage=0
-write_allocator=Null
-write_buffers=8
-writeback_clean=false
-cpu_side=system.cpu.mmu.dtb.walker.port
-mem_side=system.tol2bus.cpu_side_ports[3]
-
-[system.cpu.dtb_walker_cache.power_state]
-type=PowerState
-clk_gate_bins=20
-clk_gate_max=1000000000000
-clk_gate_min=1000
-default_state=UNDEFINED
-eventq_index=0
-leaders=
-possible_states=
-
-[system.cpu.dtb_walker_cache.replacement_policy]
-type=LRURP
-eventq_index=0
-
-[system.cpu.dtb_walker_cache.tags]
-type=BaseSetAssoc
-children=indexing_policy power_state
-assoc=2
-block_size=64
-clk_domain=system.cpu_clk_domain
-entry_size=64
-eventq_index=0
-indexing_policy=system.cpu.dtb_walker_cache.tags.indexing_policy
-power_model=
-power_state=system.cpu.dtb_walker_cache.tags.power_state
-replacement_policy=system.cpu.dtb_walker_cache.replacement_policy
-sequential_access=false
-size=1024
-system=system
-tag_latency=2
-warmup_percentage=0
-
-[system.cpu.dtb_walker_cache.tags.indexing_policy]
-type=SetAssociative
-assoc=2
-entry_size=64
-eventq_index=0
-size=1024
-
-[system.cpu.dtb_walker_cache.tags.power_state]
-type=PowerState
-clk_gate_bins=20
-clk_gate_max=1000000000000
-clk_gate_min=1000
-default_state=UNDEFINED
-eventq_index=0
-leaders=
-possible_states=
 
 [system.cpu.icache]
 type=Cache
@@ -343,134 +259,87 @@ leaders=
 possible_states=
 
 [system.cpu.interrupts]
-type=RiscvInterrupts
+type=ArmInterrupts
 eventq_index=0
 
 [system.cpu.isa]
-type=RiscvISA
-check_alignment=false
+type=ArmISA
+children=release_se
+decoderFlavor=Generic
 eventq_index=0
-riscv_type=RV64
-
-[system.cpu.itb_walker_cache]
-type=Cache
-children=power_state replacement_policy tags
-addr_ranges=0:18446744073709551615
-assoc=2
-clk_domain=system.cpu_clk_domain
-clusivity=mostly_incl
-compressor=Null
-data_latency=2
-demand_mshr_reserve=1
-eventq_index=0
-is_read_only=false
-max_miss_count=0
-move_contractions=true
-mshrs=10
-power_model=
-power_state=system.cpu.itb_walker_cache.power_state
-prefetch_on_access=false
-prefetch_on_pf_hit=false
-prefetcher=Null
-replace_expansions=true
-replacement_policy=system.cpu.itb_walker_cache.replacement_policy
-response_latency=2
-sequential_access=false
-size=1024
+fpsid=1090793632
+id_aa64afr0_el1=0
+id_aa64afr1_el1=0
+id_aa64dfr0_el1=15790086
+id_aa64dfr1_el1=0
+id_aa64isar0_el1=268435456
+id_aa64isar1_el1=16846864
+id_aa64mmfr0_el1=15728642
+id_aa64mmfr1_el1=1052704
+id_aa64mmfr2_el1=65552
+id_isar0=34607377
+id_isar1=34677009
+id_isar2=555950401
+id_isar3=17899825
+id_isar4=268501314
+id_isar5=285212672
+id_isar6=1
+id_mmfr0=270536963
+id_mmfr1=0
+id_mmfr2=19070976
+id_mmfr3=34611729
+id_mmfr4=0
+impdef_nop=false
+midr=0
+pmu=Null
+release_se=system.cpu.isa.release_se
+sme_vl_se=1
+sve_vl_se=1
 system=system
-tag_latency=2
-tags=system.cpu.itb_walker_cache.tags
-tgts_per_mshr=12
-warmup_percentage=0
-write_allocator=Null
-write_buffers=8
-writeback_clean=false
-cpu_side=system.cpu.mmu.itb.walker.port
-mem_side=system.tol2bus.cpu_side_ports[2]
 
-[system.cpu.itb_walker_cache.power_state]
-type=PowerState
-clk_gate_bins=20
-clk_gate_max=1000000000000
-clk_gate_min=1000
-default_state=UNDEFINED
+[system.cpu.isa.release_se]
+type=ArmRelease
 eventq_index=0
-leaders=
-possible_states=
-
-[system.cpu.itb_walker_cache.replacement_policy]
-type=LRURP
-eventq_index=0
-
-[system.cpu.itb_walker_cache.tags]
-type=BaseSetAssoc
-children=indexing_policy power_state
-assoc=2
-block_size=64
-clk_domain=system.cpu_clk_domain
-entry_size=64
-eventq_index=0
-indexing_policy=system.cpu.itb_walker_cache.tags.indexing_policy
-power_model=
-power_state=system.cpu.itb_walker_cache.tags.power_state
-replacement_policy=system.cpu.itb_walker_cache.replacement_policy
-sequential_access=false
-size=1024
-system=system
-tag_latency=2
-warmup_percentage=0
-
-[system.cpu.itb_walker_cache.tags.indexing_policy]
-type=SetAssociative
-assoc=2
-entry_size=64
-eventq_index=0
-size=1024
-
-[system.cpu.itb_walker_cache.tags.power_state]
-type=PowerState
-clk_gate_bins=20
-clk_gate_max=1000000000000
-clk_gate_min=1000
-default_state=UNDEFINED
-eventq_index=0
-leaders=
-possible_states=
+extensions=CRYPTO FEAT_LSE FEAT_RDM FEAT_F32MM FEAT_F64MM FEAT_SVE FEAT_I8MM FEAT_DOTPROD FEAT_FCMA FEAT_JSCVT FEAT_PAuth FEAT_FLAGM FEAT_FLAGM2 FEAT_SME TME
 
 [system.cpu.mmu]
-type=RiscvMMU
-children=dtb itb pma_checker pmp
+type=ArmMMU
+children=dtb dtb_walker itb itb_walker l2_shared stage2_dtb stage2_dtb_walker stage2_itb stage2_itb_walker
 dtb=system.cpu.mmu.dtb
+dtb_walker=system.cpu.mmu.dtb_walker
 eventq_index=0
 itb=system.cpu.mmu.itb
-pma_checker=system.cpu.mmu.pma_checker
-pmp=system.cpu.mmu.pmp
+itb_walker=system.cpu.mmu.itb_walker
+release_se=system.cpu.isa.release_se
+stage2_dtb=system.cpu.mmu.stage2_dtb
+stage2_dtb_walker=system.cpu.mmu.stage2_dtb_walker
+stage2_itb=system.cpu.mmu.stage2_itb
+stage2_itb_walker=system.cpu.mmu.stage2_itb_walker
+sys=system
 
 [system.cpu.mmu.dtb]
-type=RiscvTLB
-children=walker
+type=ArmTLB
 entry_type=data
 eventq_index=0
-next_level=Null
-pma_checker=system.cpu.mmu.pma_checker
-pmp=system.cpu.mmu.pmp
+is_stage2=false
+next_level=system.cpu.mmu.l2_shared
+partial_levels=
 size=64
-walker=system.cpu.mmu.dtb.walker
+sys=system
 
-[system.cpu.mmu.dtb.walker]
-type=RiscvPagetableWalker
+[system.cpu.mmu.dtb_walker]
+type=ArmTableWalker
 children=power_state
 clk_domain=system.cpu_clk_domain
 eventq_index=0
-num_squash_per_cycle=4
-pma_checker=system.cpu.mmu.pma_checker
-pmp=system.cpu.mmu.pmp
+is_stage2=false
+num_squash_per_cycle=2
 power_model=
-power_state=system.cpu.mmu.dtb.walker.power_state
-system=system
-port=system.cpu.dtb_walker_cache.cpu_side
+power_state=system.cpu.mmu.dtb_walker.power_state
+sys=system
+port=system.tol2bus.cpu_side_ports[3]
 
-[system.cpu.mmu.dtb.walker.power_state]
+[system.cpu.mmu.dtb_walker.power_state]
 type=PowerState
 clk_gate_bins=20
 clk_gate_max=1000000000000
@@ -481,30 +350,28 @@ leaders=
 possible_states=
 
 [system.cpu.mmu.itb]
-type=RiscvTLB
-children=walker
+type=ArmTLB
 entry_type=instruction
 eventq_index=0
-next_level=Null
-pma_checker=system.cpu.mmu.pma_checker
-pmp=system.cpu.mmu.pmp
+is_stage2=false
+next_level=system.cpu.mmu.l2_shared
+partial_levels=
 size=64
-walker=system.cpu.mmu.itb.walker
+sys=system
 
-[system.cpu.mmu.itb.walker]
-type=RiscvPagetableWalker
+[system.cpu.mmu.itb_walker]
+type=ArmTableWalker
 children=power_state
 clk_domain=system.cpu_clk_domain
 eventq_index=0
-num_squash_per_cycle=4
-pma_checker=system.cpu.mmu.pma_checker
-pmp=system.cpu.mmu.pmp
+is_stage2=false
+num_squash_per_cycle=2
 power_model=
-power_state=system.cpu.mmu.itb.walker.power_state
-system=system
-port=system.cpu.itb_walker_cache.cpu_side
+power_state=system.cpu.mmu.itb_walker.power_state
+sys=system
+port=system.tol2bus.cpu_side_ports[2]
 
-[system.cpu.mmu.itb.walker.power_state]
+[system.cpu.mmu.itb_walker.power_state]
 type=PowerState
 clk_gate_bins=20
 clk_gate_max=1000000000000
@@ -514,15 +381,79 @@ eventq_index=0
 leaders=
 possible_states=
 
-[system.cpu.mmu.pma_checker]
-type=PMAChecker
+[system.cpu.mmu.l2_shared]
+type=ArmTLB
+entry_type=unified
 eventq_index=0
-uncacheable=
+is_stage2=false
+next_level=Null
+partial_levels=L2
+size=1280
+sys=system
 
-[system.cpu.mmu.pmp]
-type=PMP
+[system.cpu.mmu.stage2_dtb]
+type=ArmTLB
+entry_type=data
 eventq_index=0
-pmp_entries=16
+is_stage2=true
+next_level=Null
+partial_levels=
+size=32
+sys=system
+
+[system.cpu.mmu.stage2_dtb_walker]
+type=ArmTableWalker
+children=power_state
+clk_domain=system.cpu_clk_domain
+eventq_index=0
+is_stage2=true
+num_squash_per_cycle=2
+power_model=
+power_state=system.cpu.mmu.stage2_dtb_walker.power_state
+sys=system
+port=system.tol2bus.cpu_side_ports[5]
+
+[system.cpu.mmu.stage2_dtb_walker.power_state]
+type=PowerState
+clk_gate_bins=20
+clk_gate_max=1000000000000
+clk_gate_min=1000
+default_state=UNDEFINED
+eventq_index=0
+leaders=
+possible_states=
+
+[system.cpu.mmu.stage2_itb]
+type=ArmTLB
+entry_type=instruction
+eventq_index=0
+is_stage2=true
+next_level=Null
+partial_levels=
+size=32
+sys=system
+
+[system.cpu.mmu.stage2_itb_walker]
+type=ArmTableWalker
+children=power_state
+clk_domain=system.cpu_clk_domain
+eventq_index=0
+is_stage2=true
+num_squash_per_cycle=2
+power_model=
+power_state=system.cpu.mmu.stage2_itb_walker.power_state
+sys=system
+port=system.tol2bus.cpu_side_ports[4]
+
+[system.cpu.mmu.stage2_itb_walker.power_state]
+type=PowerState
+clk_gate_bins=20
+clk_gate_max=1000000000000
+clk_gate_min=1000
+default_state=UNDEFINED
+eventq_index=0
+leaders=
+possible_states=
 
 [system.cpu.power_state]
 type=PowerState
@@ -541,7 +472,7 @@ eventq_index=0
 [system.cpu.workload]
 type=Process
 cmd=./src/benchmark 1 ./data/test.txt ./data/output.txt
-cwd=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3/RISCV/blackscholes
+cwd=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3/ARM/blackscholes
 drivers=
 egid=100
 env=
@@ -631,7 +562,7 @@ leaders=
 possible_states=
 
 [system.l2.replacement_policy]
-type=LRURP
+type=LFURP
 eventq_index=0
 
 [system.l2.tags]
@@ -847,19 +778,19 @@ system=system
 type=RedirectPath
 app_path=/proc
 eventq_index=0
-host_paths=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto/fs/proc
+host_paths=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3/ARM/stats_LFURP/fs/proc
 
 [system.redirect_paths1]
 type=RedirectPath
 app_path=/sys
 eventq_index=0
-host_paths=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto/fs/sys
+host_paths=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3/ARM/stats_LFURP/fs/sys
 
 [system.redirect_paths2]
 type=RedirectPath
 app_path=/tmp
 eventq_index=0
-host_paths=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto/fs/tmp
+host_paths=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3/ARM/stats_LFURP/fs/tmp
 
 [system.tol2bus]
 type=CoherentXBar
@@ -881,7 +812,7 @@ snoop_response_latency=1
 system=system
 use_default_range=false
 width=32
-cpu_side_ports=system.cpu.icache.mem_side system.cpu.dcache.mem_side system.cpu.itb_walker_cache.mem_side system.cpu.dtb_walker_cache.mem_side
+cpu_side_ports=system.cpu.icache.mem_side system.cpu.dcache.mem_side system.cpu.mmu.itb_walker.port system.cpu.mmu.dtb_walker.port system.cpu.mmu.stage2_itb_walker.port system.cpu.mmu.stage2_dtb_walker.port
 mem_side_ports=system.l2.cpu_side
 
 [system.tol2bus.power_state]
@@ -907,7 +838,7 @@ eventq_index=0
 voltage=1.0
 
 [system.workload]
-type=RiscvEmuLinux
+type=ArmEmuLinux
 eventq_index=0
 remote_gdb_port=#7000
 wait_for_remote_gdb=false
