--- a/Proyecto 3/ARM/stats/config.ini
+++ b/Proyecto 3/ARM/stats/config.ini
@@ -103,7 +103,7 @@ prefetch_on_access=false
 prefetch_on_pf_hit=false
 prefetcher=Null
 replace_expansions=true
-replacement_policy=system.cpu.dcache.replacement_policy
+replacement_policy=Null
 response_latency=2
 sequential_access=false
 size=131072
@@ -143,7 +143,7 @@ eventq_index=0
 indexing_policy=system.cpu.dcache.tags.indexing_policy
 power_model=
 power_state=system.cpu.dcache.tags.power_state
-replacement_policy=system.cpu.dcache.replacement_policy
+replacement_policy=Null
 sequential_access=false
 size=131072
 system=system
@@ -194,7 +194,7 @@ prefetch_on_access=false
 prefetch_on_pf_hit=false
 prefetcher=Null
 replace_expansions=true
-replacement_policy=system.cpu.icache.replacement_policy
+replacement_policy=Null
 response_latency=2
 sequential_access=false
 size=131072
@@ -234,7 +234,7 @@ eventq_index=0
 indexing_policy=system.cpu.icache.tags.indexing_policy
 power_model=
 power_state=system.cpu.icache.tags.power_state
-replacement_policy=system.cpu.icache.replacement_policy
+replacement_policy=Null
 sequential_access=false
 size=131072
 system=system
