Terminando Replacement Policy

--- a/Proyecto 3/RISCV/stats_LFURP/config.ini
+++ b/Proyecto 3/RISCV/stats_LFURP/config.ini
@@ -106,7 +106,7 @@ replace_expansions=true
 replacement_policy=system.cpu.dcache.replacement_policy
 response_latency=2
 sequential_access=false
-size=131072
+size=16384
 system=system
 tag_latency=2
 tags=system.cpu.dcache.tags
@@ -145,7 +145,7 @@ power_model=
 power_state=system.cpu.dcache.tags.power_state
 replacement_policy=system.cpu.dcache.replacement_policy
 sequential_access=false
-size=131072
+size=16384
 system=system
 tag_latency=2
 warmup_percentage=0
@@ -155,7 +155,7 @@ type=SetAssociative
 assoc=2
 entry_size=64
 eventq_index=0
-size=131072
+size=16384
 
 [system.cpu.dcache.tags.power_state]
 type=PowerState
@@ -281,7 +281,7 @@ replace_expansions=true
 replacement_policy=system.cpu.icache.replacement_policy
 response_latency=2
 sequential_access=false
-size=131072
+size=16384
 system=system
 tag_latency=2
 tags=system.cpu.icache.tags
@@ -320,7 +320,7 @@ power_model=
 power_state=system.cpu.icache.tags.power_state
 replacement_policy=system.cpu.icache.replacement_policy
 sequential_access=false
-size=131072
+size=16384
 system=system
 tag_latency=2
 warmup_percentage=0
@@ -330,7 +330,7 @@ type=SetAssociative
 assoc=2
 entry_size=64
 eventq_index=0
-size=131072
+size=16384
 
 [system.cpu.icache.tags.power_state]
 type=PowerState
@@ -588,7 +588,7 @@ transition_latency=100000000
 type=Cache
 children=power_state replacement_policy tags
 addr_ranges=0:18446744073709551615
-assoc=1
+assoc=8
 clk_domain=system.cpu_clk_domain
 clusivity=mostly_incl
 compressor=Null
@@ -608,7 +608,7 @@ replace_expansions=true
 replacement_policy=system.l2.replacement_policy
 response_latency=20
 sequential_access=false
-size=131072
+size=32768
 system=system
 tag_latency=20
 tags=system.l2.tags
@@ -631,13 +631,13 @@ leaders=
 possible_states=
 
 [system.l2.replacement_policy]
-type=DuelingRP
+type=LFURP
 eventq_index=0
 
 [system.l2.tags]
 type=BaseSetAssoc
 children=indexing_policy power_state
-assoc=1
+assoc=8
 block_size=64
 clk_domain=system.cpu_clk_domain
 entry_size=64
@@ -647,17 +647,17 @@ power_model=
 power_state=system.l2.tags.power_state
 replacement_policy=system.l2.replacement_policy
 sequential_access=false
-size=131072
+size=32768
 system=system
 tag_latency=20
 warmup_percentage=0
 
 [system.l2.tags.indexing_policy]
 type=SetAssociative
-assoc=1
+assoc=8
 entry_size=64
 eventq_index=0
-size=131072
+size=32768
 
 [system.l2.tags.power_state]
 type=PowerState
@@ -847,19 +847,19 @@ system=system
 type=RedirectPath
 app_path=/proc
 eventq_index=0
-host_paths=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3/RISCV/stats/fs/proc
+host_paths=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3/RISCV/stats_LFURP/fs/proc
 
 [system.redirect_paths1]
 type=RedirectPath
 app_path=/sys
 eventq_index=0
-host_paths=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3/RISCV/stats/fs/sys
+host_paths=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3/RISCV/stats_LFURP/fs/sys
 
 [system.redirect_paths2]
 type=RedirectPath
 app_path=/tmp
 eventq_index=0
-host_paths=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3/RISCV/stats/fs/tmp
+host_paths=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3/RISCV/stats_LFURP/fs/tmp
 
 [system.tol2bus]
 type=CoherentXBar
