--- a/Proyecto 3/CPUs/MinorCPU/RISCV/SPEC/CacheBM/config.ini
+++ b/Proyecto 3/CPUs/MinorCPU/RISCV/SPEC/CacheBM/config.ini
@@ -106,7 +106,7 @@ replace_expansions=true
 replacement_policy=system.cpu.dcache.replacement_policy
 response_latency=2
 sequential_access=false
-size=131072
+size=524288
 system=system
 tag_latency=2
 tags=system.cpu.dcache.tags
@@ -145,7 +145,7 @@ power_model=
 power_state=system.cpu.dcache.tags.power_state
 replacement_policy=system.cpu.dcache.replacement_policy
 sequential_access=false
-size=131072
+size=524288
 system=system
 tag_latency=2
 warmup_percentage=0
@@ -155,7 +155,7 @@ type=SetAssociative
 assoc=2
 entry_size=64
 eventq_index=0
-size=131072
+size=524288
 
 [system.cpu.dcache.tags.power_state]
 type=PowerState
@@ -281,7 +281,7 @@ replace_expansions=true
 replacement_policy=system.cpu.icache.replacement_policy
 response_latency=2
 sequential_access=false
-size=131072
+size=524288
 system=system
 tag_latency=2
 tags=system.cpu.icache.tags
@@ -320,7 +320,7 @@ power_model=
 power_state=system.cpu.icache.tags.power_state
 replacement_policy=system.cpu.icache.replacement_policy
 sequential_access=false
-size=131072
+size=524288
 system=system
 tag_latency=2
 warmup_percentage=0
@@ -330,7 +330,7 @@ type=SetAssociative
 assoc=2
 entry_size=64
 eventq_index=0
-size=131072
+size=524288
 
 [system.cpu.icache.tags.power_state]
 type=PowerState
@@ -847,19 +847,19 @@ system=system
 type=RedirectPath
 app_path=/proc
 eventq_index=0
-host_paths=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3/RISCV/stats/fs/proc
+host_paths=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3//CPUs/MinorCPU/RISCV/SPEC/CacheBM/fs/proc
 
 [system.redirect_paths1]
 type=RedirectPath
 app_path=/sys
 eventq_index=0
-host_paths=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3/RISCV/stats/fs/sys
+host_paths=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3//CPUs/MinorCPU/RISCV/SPEC/CacheBM/fs/sys
 
 [system.redirect_paths2]
 type=RedirectPath
 app_path=/tmp
 eventq_index=0
-host_paths=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3/RISCV/stats/fs/tmp
+host_paths=/home/saul/Desktop/Proyectos/sgomez-computer-architecture-1-2024-s1/Proyecto 3//CPUs/MinorCPU/RISCV/SPEC/CacheBM/fs/tmp
 
 [system.tol2bus]
 type=CoherentXBar
